--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~8.2.7",
     "@types/lodash": "^4.14.146",
     "angularfire2": "^5.2.3",
+    "bootstrap": "^3.4.1",
     "firebase": "^7.3.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
