--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
+    "@angular/pwa": "^0.803.19",
     "@angular/router": "~8.2.7",
+    "@angular/service-worker": "~8.2.7",
     "@types/lodash": "^4.14.146",
     "angularfire2": "^5.2.3",
     "bootstrap": "^3.4.1",
